--- a/navigation.html
+++ b/navigation.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="games.html">
     <link rel="shortcut icon" type="image/jpeg" href="images/smurf background.jpg">
     <link rel="stylesheet" href="navigation.css">
     <meta charset="UTF-8">
@@ -25,7 +26,7 @@
 <br>
 <button class="link"><a href="Amongus meme.html">AMONG US</a></button>
 <br>
-<button disabled="disabled" class="weapon"><a aria-disabled="false" href="">Smurf Weapon Designs</a></button><span>...coming soon!...</span>
+<button class="link"><a href="games.html">Smurf games</a></button>
 
 </body>
 </html>
