--- a/games.html
+++ b/games.html
@@ -9,10 +9,12 @@
     <title>games</title>
 </head>
 <body>
+  
+  <button class="home"><a>Smurf Home</a></button>
 
-  <p>1. guessing game</p>
+<button><a href="guessing.py">Smurf Number guessing</a></button>
 
-<button></button><button></button><button></button>
+
 
 </body>
 </html>
