--- a/navigation.html
+++ b/navigation.html
@@ -20,7 +20,7 @@
 <br>
 <button disabled="disabled" class="link"><a href="">Smurf Chat</a></button> <span>...coming soon!...</span>
 <br>
-<button class="link"><a href="signup.html">Smurf sign up</a></button>
+<button class="link"><a href="signup.html">Smurf sign up</a></button> <span>...coming soon!...</span>
 <br>
 <button class="link"><a href="login.html">smurf login</a></button>
 <br>
