--- a/Updates.html
+++ b/Updates.html
@@ -11,5 +11,11 @@
     
 <button><a href="index.html">Smurf home</a></button>
 
+<li>Games</li><br>
+<li>more easter eggs</li><br>
+<H1>Coming soon!</H1><br>
+<li>chat done</li><br>
+<li>sign up</li><br>
+<li>new/better games</li>
 </body>
 </html>
