--- a/navigation.html
+++ b/navigation.html
@@ -16,7 +16,7 @@
 
     <button class="link"><a href="meeting.html">Smurf Meeting</a></button>
 <br>
-<button class="link"><a href="Updates.html">Smurf Update Log</a></button>
+<button class="link"><a href="Updates.html">Smurf Updates</a></button>
 <br>
 <button disabled="disabled" class="link"><a href="">Smurf Chat</a></button> <span>...coming soon!...</span>
 <br>
