--- a/games.html
+++ b/games.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="index.html">
   <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="games.css">
     <meta charset="UTF-8">
@@ -14,7 +15,20 @@
 
 <button><a href="guessing.py">Smurf Number guessing</a></button>
 
+<form>
+<input id="leaderboard" placeholder="Number guessing score" type="text">
+<button onclick="print">submit</button>
+</form>
 
+<script>
+
+function print() {
+  alert(hello) 
+
+  }
+
+
+  </script>
 
 </body>
 </html>
