--- a/games.html
+++ b/games.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="image/jpeg" href="images/smurf background.jpg">
   <link rel="stylesheet" href="index.html">
   <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="games.css">
@@ -11,24 +12,10 @@
 </head>
 <body>
   
-  <button class="home"><a>Smurf Home</a></button>
+  <button class="home"><a href="index.html">Smurf Home</a></button>
+  <button class="home"><a href="navigation.html">Smurf Navigation</a></button>
 
 <button><a href="guessing.py">Smurf Number guessing</a></button>
-
-<form>
-<input id="leaderboard" placeholder="Number guessing score" type="text">
-<button onclick="print">submit</button>
-</form>
-
-<script>
-
-function print() {
-  alert(hello) 
-
-  }
-
-
-  </script>
 
 </body>
 </html>
